objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Company_City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Company_City__c</fullName>
    <defaultValue>$Organization.City</defaultValue>
    <label>Company City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>