objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Company_Country__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Company_Country__c</fullName>
    <defaultValue>$Organization.Country</defaultValue>
    <label>Company Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>