objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Company_State__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Company_State__c</fullName>
    <defaultValue>$Organization.State</defaultValue>
    <label>Company State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>