objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Company_Street2__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Company_Street2__c</fullName>
    <defaultValue>$Organization.Street</defaultValue>
    <label>Company Street</label>
    <type>TextArea</type>
</CustomField>