objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Currency_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Currency_Format__c</fullName>
    <inlineHelpText>Overrides the default currency format (corporate currency&apos;s ISO code and 2 decimal places for currency amounts ). For instance, you would enter &apos;US$ 0.000&apos; to format currency amounts as prefixed with US$ and with 3 decimal places.</inlineHelpText>
    <label>Currency Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>