objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Default_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_Email_Template__c</fullName>
    <inlineHelpText>This is the email template used when emailing Billing PDF Invoices. Use the Template Unique Name NOT the Template Name when populating this field.</inlineHelpText>
    <label>Default Email Template</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>