objects/AcctSeed__Billing_Format__c/fields/AcctSeed__ReplyTo_Email__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__ReplyTo_Email__c</fullName>
    <inlineHelpText>Sets the sending email address if the user attempts to reply to the email.</inlineHelpText>
    <label>ReplyTo Email</label>
    <type>Email</type>
</CustomField>