objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sort_Field__c</fullName>
    <inlineHelpText>The API name of the field used to sort the billing lines.</inlineHelpText>
    <label>Sort Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>