objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <inlineHelpText>The type of record this PDF format is associated with.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Activity Statement</fullName>
            </value>
            <value>
                <fullName>Outstanding Statement</fullName>
            </value>
            <value>
                <fullName>Packing Slip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>