objects/AcctSeed__Billing_Format__c/fields/AcctSeed__Visualforce_PDF_Page__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Visualforce_PDF_Page__c</fullName>
    <inlineHelpText>The API name of the Visualforce page that is used to display the PDF rendition of the Billing.</inlineHelpText>
    <label>Visualforce PDF Page</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>