objects/AcctSeed__Billing_Format__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Company_Name__c</columns>
    <columns>AcctSeed__Automated_Email_Delivery__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>